feat: discount configuration added, now it can be changed all the discounts for the app. changes: some fixes and changes in frontend, some tests changes too